검색 자동완성 추가

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,9 +7,11 @@ spring:
         show-sql: true
         open-in-view: false
         hibernate:
-            ddl-auto: create
+            ddl-auto: update
+    redis:
+        host: 127.0.0.1
+        port: 6379
 
-        
         
 logging: 
     level: 
