--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,7 +7,7 @@ spring:
         show-sql: true
         open-in-view: false
         hibernate:
-            ddl-auto: update
+            ddl-auto: create-drop
     redis:
         host: 127.0.0.1
         port: 6379
