--- a/src/main/resources/application-gcp.yml
+++ b/src/main/resources/application-gcp.yml
@@ -7,14 +7,14 @@ spring:
         show-sql: true
         open-in-view: false
         hibernate:
-            ddl-auto: create-drop
+            ddl-auto: update
     redis:
         host: redis-svc.default
         port: 6379
 
-    
-logging: 
-    level: 
-        org.hibernate.type.descriptor.sql: trace
+
+logging:
+   level: 
+        org.hibernate.type.descriptor.sql: trace 
+
         
-    
