달력표시 추가

--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -13,9 +13,10 @@ spring:
         port: 6379
 
         
-logging: 
-    level: 
-        org.hibernate.type.descriptor.sql: trace
+logging:
+  level:
+    root: INFO
+    
         
     
 
