--- a/src/main/resources/application-gcp.yml
+++ b/src/main/resources/application-gcp.yml
@@ -7,7 +7,7 @@ spring:
         show-sql: true
         open-in-view: false
         hibernate:
-            ddl-auto: update
+            ddl-auto: create-drop
     redis:
         host: redis-svc.default
         port: 6379
@@ -15,6 +15,6 @@ spring:
 
 logging:
    level: 
-        org.hibernate.type.descriptor.sql: trace 
+       root: INFO
 
         
